--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ install:
   - pip install coveralls
 script:
   make
-  coverage run --source=rpn make test
+  coverage run --source=rpn test_rpn.py
 after_success:
   coveralls
