--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ install:
   - pip install coveralls
 script:
   - make
-  - coverage run --source=rpn test_rpn.py
+  - coverage run --source=rpn -m unittest
 after_success:
   coveralls
